fix: horizontal scroll

--- a/blocks/popup/__profession/popup__profession.css
+++ b/blocks/popup/__profession/popup__profession.css
@@ -8,9 +8,6 @@
     font-size: 14px;
     line-height: 16.94px;
     max-height: 14px;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    overflow: hidden;
 }
 
 @media screen and (max-width: 450px) {
