--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -1,5 +1,6 @@
 .profile__title {
     margin: 0;
+    max-width: 294px;
     font-size: 42px;
     line-height: 48px;
     font-weight: 500;
@@ -13,5 +14,6 @@
     .profile__title {
         font-size: 27px;
         line-height: 32.68px;
+        max-width: 189px;
     }
 }
